[gd_scene load_steps=22 format=3 uid="uid://y7e1vlks2rig"]

[ext_resource type="Script" path="res://laser_enemy.gd" id="1_dp5v8"]
[ext_resource type="Script" path="res://Components/Component Scripts/attack_component.gd" id="2_fgv36"]
[ext_resource type="Texture2D" uid="uid://1rutfw84fh3s" path="res://Assets/laser_idle-Sheet.png" id="2_jogqq"]
[ext_resource type="Script" path="res://Components/hitbox_component.gd" id="3_6t75s"]
[ext_resource type="Texture2D" uid="uid://c4k2o7of1vp1m" path="res://Assets/laser-Sheet.png" id="3_ckqk2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3l2v6"]
atlas = ExtResource("2_jogqq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1wai"]
atlas = ExtResource("2_jogqq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpnuh"]
atlas = ExtResource("2_jogqq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bi4h"]
atlas = ExtResource("2_jogqq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m26xc"]
atlas = ExtResource("2_jogqq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdqrh"]
atlas = ExtResource("3_ckqk2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66is1"]
atlas = ExtResource("3_ckqk2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqghe"]
atlas = ExtResource("3_ckqk2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojvo"]
atlas = ExtResource("3_ckqk2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6snpb"]
atlas = ExtResource("3_ckqk2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flo23"]
atlas = ExtResource("3_ckqk2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02rng"]
atlas = ExtResource("3_ckqk2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vovql"]
atlas = ExtResource("3_ckqk2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_agi4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l2v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1wai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpnuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bi4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m26xc")
}],
"loop": true,
"name": &"laser_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdqrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66is1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqghe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6snpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flo23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02rng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vovql")
}],
"loop": false,
"name": &"laser_shoot",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3fl57"]
radius = 7.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jebwv"]
radius = 7.0
height = 62.0

[node name="laser_enemy" type="Area2D"]
scale = Vector2(5, 5)
collision_layer = 0
collision_mask = 16
script = ExtResource("1_dp5v8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_agi4a")
animation = &"laser_shoot"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3fl57")

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("2_fgv36")

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("3_6t75s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CapsuleShape2D_jebwv")

[node name="damage_time" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
[connection signal="area_exited" from="HitBoxComponent" to="." method="_on_hit_box_component_area_exited"]
[connection signal="timeout" from="damage_time" to="." method="_on_damage_time_timeout"]
